# GTMobile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: .gitignore  build-and-run.sh  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/twobit/gtmobile/: FileUtils.java  MainActivity.java  MusicService.java  Native.java  View.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/native-libs/: CMakeLists.txt
assets/: Nordic_Scene_Review.sng  Remembrance.sng
assets/songs/: Brite Byte.sng  Endgame.sng  Smoke_and_Mirrors.sng  hyperspace.sng
docs/: Gemfile  _config.yml  about.markdown  history.markdown  index.markdown  manual.markdown  privacy-policy.markdown
docs/_includes/: footer.html  head.html  header.html
docs/_sass/: minima.scss
docs/_sass/minima/: _base.scss  _layout.scss
src/: app.cpp  app.hpp  command_edit.cpp  command_edit.hpp  gfx.cpp  gfx.hpp  gtplayer.cpp  gtplayer.hpp  gtsong.cpp  gtsong.hpp  gui.cpp  gui.hpp  instrument_manager_view.cpp  instrument_manager_view.hpp  instrument_view.cpp  instrument_view.hpp  log.hpp  piano.cpp  piano.hpp  platform.cpp  platform.hpp  project_view.cpp  project_view.hpp  settings_view.cpp  settings_view.hpp  sha256.hpp  sid.cpp  sid.hpp  sidengine.cpp  sidengine.hpp  song_undo.cpp  song_undo.hpp  song_view.cpp  song_view.hpp  songview.cpp  songview.hpp  vec.hpp
src/resid/: dac.cc  sid.h
web/: build-with-emcc.sh  shell.html
